--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact forms</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -43,11 +43,14 @@
           </div>
         </div>
         <div class="flexbox">
-          <img
+          <div class="img">
+                    <img
             class="img-responcive"
             src="./assets/img/contact.jpeg"
             alt="Contact forms"
-          />
+          /> 
+          </div>
+ 
           <div class="contact">
             <div class="address flex">
               <div class="icons">
