--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <body>
     <div class="container default-font">
       <div class="flex">
+        <div class="toast">
+          <p>sample toast messages</p>
+          <i id="close" onclick="hideToast()" class="close fa-solid fa-xmark"></i>
+        </div>
         <div class="flexbox default-font">
           <h3 class="theme-default">Contact</h3>
           <p>Fill Out The Form Below And We'll Get Back To You Shortly.</p>
@@ -81,5 +85,18 @@
         </div>
       </div>
     </div>
+
+    <script>
+      function hideToast(){ 
+        const close =  document.querySelector('.close');
+        const toast = document.querySelector('.toast');
+        // close.style.display = "none"
+        toast.classList.add('toast-out');
+        setTimeout(() => {
+          toast.classList.add('hide');
+        }, 1000);
+        console.log("testing");
+      }
+    </script>
   </body>
 </html>
