form validation updated with colors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container default-font">
       <div class="flex "> 
         <div class="addToast">
-      
+      <!-- Code will be injucted by the javascript  -->
     </div>
         <!-- <div class="toast">
           <p>sample toast messages</p>
